--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
-.List {
+body {
+  background-color: gray
+}
+
+h1 {
+    color: lightgreen;
+    text-align: center;
+}
+p {
   text-align: center;
-    color: green;
+}
+counter {
+    color: lightgreen;
+    text-decoration: underline;
+    font-size: 20
 }
