Custom CSS Tags
+ Added 'icon' class to load a small version of the Icon
=n Might use as a controlled toolbar
=n Might usurp the existing Electron Menubar
+ Added some additional Icon files.
+ Captured some pallete information, and update CSS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,25 @@
 body {
-  background-color: gray
+  background-color: #3e3e3e
 }
 
 h1 {
-    color: lightgreen;
+    color: #6dd634;
     text-align: center;
 }
+
 p {
+  color: white;
   text-align: center;
 }
+
 counter {
-    color: lightgreen;
+    color: #6dd634;
     text-decoration: underline;
-    font-size: 20
+}
+
+.icon {
+  background: url('../img/JAETEx64.png') no-repeat scroll 0 0 transparent;
+  height: 64px;
+  padding-left: 96px;
+  align-content: center;
 }
