--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,20 @@ counter {
     text-decoration: underline;
 }
 
-.icon {
+.JAETEMenu {
   background: url('../img/JAETEx64.png') no-repeat scroll 0 0 transparent;
   height: 64px;
   padding-left: 96px;
   align-content: center;
+  color: white;
+  text-align: center;
+}
+
+textarea {
+  background-color: lightgray;
+  border: 2px;
+  text-decoration-color: black;
+  width: 100%;
+  height: 800px;
+
 }
